Fixing apps UI issues.

--- a/frontend/src/core/components/CreateForm/CreateForm.scss
+++ b/frontend/src/core/components/CreateForm/CreateForm.scss
@@ -11,8 +11,12 @@
     color: $secondary-color;
   }
 
-  .create-form-left-side {
+  .create-form-right-side {
     margin-top: 10px;
+  }
+
+  .create-form-left-side {
+    padding-left: 0;
   }
 
   .legal-info {
