--- a/frontend/src/core/components/DefaultLayout/LoginStatus/LoginStatus.scss
+++ b/frontend/src/core/components/DefaultLayout/LoginStatus/LoginStatus.scss
@@ -38,7 +38,7 @@
     background-color: white;
 
     .dropdown-item {
-      font-family: $default-font-family;
+      font-family: $primary-font-family;
       font-size: 12px;
       font-weight: 300;
       color: #282828;
