--- a/frontend/src/core/components/ImageFileUpload/ImageFileUpload.scss
+++ b/frontend/src/core/components/ImageFileUpload/ImageFileUpload.scss
@@ -19,7 +19,7 @@
     p {
       text-align: center;
       color: $primary-color;
-      font-family: $default-font-family;
+      font-family: $primary-font-family;
       font-size: 12px;
 
       span.alt {
