--- a/frontend/src/scss/Variables/DefaultLayout.scss
+++ b/frontend/src/scss/Variables/DefaultLayout.scss
@@ -16,7 +16,7 @@ $menu-icon-size: (
 
 $menu-item-font: (
   color: #ffffff,
-  font-family: $default-font-family,
+  font-family: $primary-font-family,
   weight: 900,
   size: 14px
 );
@@ -39,7 +39,7 @@ $item-size: (
 
 $user-login-font: (
   color: #282828,
-  font-family: $default-font-family,
+  font-family: $primary-font-family,
   weight: normal,
   size: 12px
 );
