--- a/frontend/src/views/Dashboard/Dashboard.scss
+++ b/frontend/src/views/Dashboard/Dashboard.scss
@@ -11,7 +11,7 @@
       button {
         width: 80px;
         height: 30px;
-        font-family: $default-font-family;
+        font-family: $primary-font-family;
         font-size: 13px;
         padding-top: 4px;
       }
