--- a/frontend/src/core/components/DefaultLayout/AppNavbar/Notification/Notifications.scss
+++ b/frontend/src/core/components/DefaultLayout/AppNavbar/Notification/Notifications.scss
@@ -10,7 +10,7 @@
     top: -6px;
     right: 13px;
 
-    font-family: $default-font-family;
+    font-family: $primary-font-family;
     font-size: 9px;
     color: #ffffff;
   }
