--- a/frontend/src/core/components/DefaultLayout/AppSidebar/AppSidebar.scss
+++ b/frontend/src/core/components/DefaultLayout/AppSidebar/AppSidebar.scss
@@ -51,7 +51,7 @@
 
   div {
     span.footer-copyright {
-      font-family: $default-font-family;
+      font-family: $primary-font-family;
       color: white;
       font-size: 14px;
       font-weight: 300;
