--- a/frontend/src/core/components/InfoCard/InfoCard.scss
+++ b/frontend/src/core/components/InfoCard/InfoCard.scss
@@ -13,7 +13,7 @@
   padding-left: 25px;
 
   h2 {
-    font-family: $default-font-family;
+    font-family: $primary-font-family;
     font-size: 24px;
     color: $primary-color;
     font-weight: bold;
@@ -22,7 +22,7 @@
   }
 
   p {
-    font-family: $default-font-family;
+    font-family: $primary-font-family;
     font-size: 14px;
     color: #888888;
     font-weight: 300;
