Fixing dashboard issues.

--- a/frontend/src/core/components/CreateForm/CreateForm.scss
+++ b/frontend/src/core/components/CreateForm/CreateForm.scss
@@ -2,6 +2,12 @@
 
 #create-form {
 
+  button {
+    span {
+      left: -22px;
+    }
+  }
+
   .info {
     font-family: $primary-font-family;
     font-weight: 300;
