--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -278,6 +278,7 @@ label.form-label {
 
 button {
   height: 32px;
+  width: 105px;
 
   span {
     position: relative;
@@ -345,9 +346,9 @@ button {
 }
 
 // Spinner Loader
-.css-1skdk9r {
-  display: block;
-  margin: 0 auto;
+.pocket-loader {
+  margin-top: 25%;
+  margin-left: 45%;
 }
 
 
