--- a/frontend/src/core/components/DefaultLayout/AppSidebar/AppSidebar.scss
+++ b/frontend/src/core/components/DefaultLayout/AppSidebar/AppSidebar.scss
@@ -46,10 +46,14 @@
 }
 
 .app-sidebar-footer {
-  position: relative;
-  bottom: -290px;
+  position: absolute;
+  bottom: 10px;
+  margin: 0 auto;
+  width: 100%;
 
-  div {
+  div.footer {
+    // margin-top: ;
+
     span.footer-copyright {
       font-family: $primary-font-family;
       color: white;
@@ -59,5 +63,3 @@
     }
   }
 }
-
-
