Fixing application issues.

--- a/frontend/src/core/components/Chains/Chains.scss
+++ b/frontend/src/core/components/Chains/Chains.scss
@@ -28,6 +28,14 @@
     .search-panel {
       margin-left: -15px;
       width: 606px;
+
+      button {
+        width: 30px;
+
+        img {
+          left: -12px;
+        }
+      }
     }
 
     .body {
