--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -496,8 +496,8 @@ textarea.form-control::placeholder {
 input[type="checkbox"],
 input[type="radio"] {
   position: relative;
-  width: 1.5em;
-  height: 1.5em;
+  width: 1.6em;
+  height: 1.6em;
   color: $black;
   border: 1px solid $light-gray;
   border-radius: 4px;
@@ -528,6 +528,8 @@ input[type="radio"] {
 
     &::before {
       opacity: 1;
+      margin-left: -2px;
+      margin-top: -2px;
     }
 
     ~label::before {
