Finish App import initial UI layout

--- a/frontend/src/views/Apps/Import/ImportApp.scss
+++ b/frontend/src/views/Apps/Import/ImportApp.scss
@@ -1,1 +1,11 @@
+.import {
+  .upload-btn {
+    min-width: 140px;
+  }
 
+  .address {
+    margin-left: 50px;
+    margin-left: 20px;
+    font-size: 1.2em;
+  }
+}
