Modified import app process

--- a/frontend/src/views/Apps/Import/ImportApp.scss
+++ b/frontend/src/views/Apps/Import/ImportApp.scss
@@ -8,4 +8,14 @@
     margin-left: 20px;
     font-size: 1.2em;
   }
+
+  .invalid-acount {
+    padding-right: 155px !important;
+    padding-top: 30px;
+  }
+
+  .upload-key {
+    white-space: nowrap;
+    padding: 3px 10px;
+  }
 }
