Fix apps ui issues.

--- a/frontend/src/core/components/InfoCard/InfoCard.scss
+++ b/frontend/src/core/components/InfoCard/InfoCard.scss
@@ -11,6 +11,7 @@
   flex-direction: column;
   flex-grow: 1;
   padding-left: 25px;
+  padding-right: 25px;
 
   h2 {
     font-family: $primary-font-family;
