--- a/frontend/src/core/components/PocketElementCard/PocketElementCard.scss
+++ b/frontend/src/core/components/PocketElementCard/PocketElementCard.scss
@@ -3,10 +3,10 @@
 .p-card {
   margin-top: 10px;
   margin-bottom: 10px;
-  padding: 10px 10px;
+  padding: 27px 20px;
   border: 1px solid rgba(0, 0, 0, .125);
   border-radius: 7px;
-  box-shadow: 0 0px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 6px 0 rgba(0, 0, 0, 0.19);
+  //box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.2), 0 1px 6px 0 rgba(0, 0, 0, 0.19);
 
   display: flex;
   flex-direction: column;
@@ -25,28 +25,34 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 15px 20px;
+    padding: 0 0;
 
     .detail {
       display: flex;
       flex-direction: row;
 
       .info {
+
         p:first-of-type {
           font-size: 18px;
           font-weight: 800;
-          font-family: "Open Sans";
+          font-family: $secondary-font-family;
+          margin-bottom: 1px;
+          text-transform: uppercase;
         }
 
         p:last-of-type {
           color: #c0c7ce;
           margin-top: -5px;
+          font-family: $primary-font-family;
+          font-weight: 300;
+          font-size: 14px;
         }
       }
 
       img {
-        height: 50px;
-        width: 50px;
+        height: 42px;
+        width: 42px;
         border-radius: 50%;
         margin-right: 15px;
       }
@@ -57,8 +63,9 @@
 
       p {
         color: $primary-color;
+        font-family: $primary-font-family;
         font-weight: bold;
-        font-size: 1.2em;
+        font-size: 14px;
       }
     }
   }
