--- a/frontend/src/views/Dashboard/Dashboard.scss
+++ b/frontend/src/views/Dashboard/Dashboard.scss
@@ -44,15 +44,24 @@
     flex-direction: row;
 
     * {
-      margin-right: 12px;
+      margin-left: 6px;
+      margin-right: 6px;
     }
   }
 
   .network-status-tables {
     margin-top: 50px;
+    margin-right: -10px;
 
     .network-status-table {
       padding-left: 0;
+    }
+
+    .segment-empty {
+      .body {
+        height: 60px;
+        overflow-y: hidden;
+      }
     }
   }
 
