Fix apps ui issues.

--- a/frontend/src/views/Apps/AppsMain/AppsMain.scss
+++ b/frontend/src/views/Apps/AppsMain/AppsMain.scss
@@ -43,6 +43,10 @@
       }
     }
 
+    .search-panel-without-apps {
+      display: none;
+    }
+
     .my-apps-segment {
       .app-segment {
         .head {
