--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -341,6 +341,13 @@ button {
   }
 }
 
+.segment-table-empty {
+  .body {
+    height: 60px;
+    overflow-y: hidden;
+  }
+}
+
 .main-list {
   a:hover {
     text-decoration: none;
@@ -364,21 +371,25 @@ button {
 }
 
 .empty-overlay {
-  background-color: $light-gray;
-  height: 50vh;
+  height: 35vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 20px;
 
-  .icon {
-    color: gray;
+  img {
+    width: 132px;
+    height: 105px;
   }
 
   p {
-    font-size: 1.2em;
-    font-weight: 300;
+    text-transform: uppercase;
+    font-family: $secondary-font-family;
+    font-size: 18px;
+    font-weight: 800;
+    text-align: center;
+    color: #06202e;
   }
 }
 
@@ -561,6 +572,11 @@ input[type="radio"] {
       height: 16px;
     }
   }
+
+  .dropdown-item:active {
+    background-color: transparent;
+  }
+
 }
 
 /* Custom scroll bar. Not supports in Firefox and IE */
