Fix apps ui issues.

--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -38,14 +38,14 @@
     font-size: 30px;
     line-height: 1.27;
     letter-spacing: -0.82px;
-    color: $form-label-font-color;
+    color: $title-primary-color;
   }
 
   h2 {
     font-family: $primary-font-family;
     font-size: 21px;
     font-weight: 900;
-    color: $form-label-font-color;
+    color: $title-primary-color;
   }
 
   p {
