--- a/frontend/src/scss/Variables/Colors.scss
+++ b/frontend/src/scss/Variables/Colors.scss
@@ -18,3 +18,8 @@ $alert: #ffbf02;
 $form-label-font-color: #06202e;
 
 
+// Titles
+$title-primary-color: $dark-blue;
+$title-secondary-color: $dark-gray;
+
+
