--- a/frontend/src/views/Apps/AppsMain/AppsMain.scss
+++ b/frontend/src/views/Apps/AppsMain/AppsMain.scss
@@ -1,9 +1,10 @@
 @import "../../../scss/Core";
 
 .app-main {
+
   .page-title {
     h1 {
-      color: $secondary-color;
+      color: $title-secondary-color;
     }
   }
 
