--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -53,6 +53,16 @@
     font-size: 14px;
     color: $secondary-color;
   }
+
+  .info {
+    font-family: $primary-font-family;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 2.38;
+    letter-spacing: -0.44px;
+    color: $secondary-color;
+  }
+
 }
 
 // Paragraphs, Labels, Links
