--- a/frontend/src/core/components/DeletedOverlay/DeletedOverlay.scss
+++ b/frontend/src/core/components/DeletedOverlay/DeletedOverlay.scss
@@ -1,11 +1,27 @@
-#deleted {
-  .background {
-    background-color: #e6e6e6;
-    padding: 60px;
-    border-radius: 50%;
+@import "../../../scss/Variables/Fonts";
+
+.deleted-overlay {
+  padding-top: 15%;
+
+  img {
+    width: 88px;
+    height: 98px;
   }
 
   p {
-    font-size: 2em;
+    text-transform: uppercase;
+    font-family: $secondary-font-family;
+    font-size: 18px;
+    font-weight: 800;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: center;
+    color: $dark-blue;
+  }
+
+  button {
+
   }
 }
