Add validateKeys component

--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -50,7 +50,8 @@
 
   p {
     font-family: $primary-font-family;
-    font-size: 14px;
+    font-size: 18px;
+    font-weight: 300;
     color: $secondary-color;
   }
 
