--- a/frontend/src/views/Apps/AppPassphrase/AppPassphrase.scss
+++ b/frontend/src/views/Apps/AppPassphrase/AppPassphrase.scss
@@ -67,7 +67,8 @@
 
         .invalid-feedback {
           position: absolute;
-          padding-right: 85px;
+          padding: 0;
+          top: 65px;
         }
       }
 
